package dev.fredpena.designpattern.structural.facade.framework;

/**
 * @author me@fredpena.dev
 * @created 19/09/2025  - 09:58
 */
public interface Codec {
    String name();
}